[package]
name = "rendy-sphere-visualizer"
version = "1.0.0"
authors = ["MrInformatic <maxundmoritz99199@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
vulkan = ["rendy/vulkan"]
dx12 = ["rendy/dx12"]
metal = ["rendy/metal"]

[dependencies]
rendy = { version = "0.5.1", features = ["init-winit"] }
lazy_static = "1.4.0"
nalgebra = "0.21.1"
nalgebra-glm = "0.7.0"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.52"
genmesh = "0.6.2"
image = "0.23.4"
fps_counter = "1.0.0"
anyhow = "1.0.31"
clap = "3.0.0-beta.1"
futures = { version = "0.3.5", features = ["thread-pool"] }
legion = "0.2.1"
ncollide3d = "0.23.1"
nphysics3d = "0.16.0"
rand = "0.7.3"
rodio = "0.11.0"
cpal = "0.11.0"
shrinkwraprs = "0.3.0"

[dev-dependencies]
assert_approx_eq = "1.1.0"

[profile.release]
debug = true
